--- a/getting-started/src/index.html
+++ b/getting-started/src/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <title>react-webpack-wrapper-example</title>
-    <script src="/builds/chat-template.js" type="text/javascript"></script>
+    <script src="./assets/chat-template.js" type="text/javascript"></script>
+    <script src="./assets/test.js" type="text/javascript"></script>
     <script>
       var messages = [
         {
